２年午後プログラミング、監査少し

--- a/BasicInformation/午前/2.マネジメント系/3.システム監査.md
+++ b/BasicInformation/午前/2.マネジメント系/3.システム監査.md
@@ -37,31 +37,67 @@
 
 システム監査人に求められる独立性、客観性として「外観上の独立性」及び「精神上の独立性」を定めています。
 
-### 外観上の独立性
+#### 外観上の独立性
 
 システム監査人は、監査対象の領域又は活動から、独立かつ客観的な立場で監査が実施されているという外観に十分に配慮しなければならない。
 システム監査人は、システム監査を客観的に実施するために、監査対象から独立していなければならない。
 監査の目的によっては、被監査主体と身分上、密接な利害関係を有することがあってはならない。
 
-### 精神上の独立性
+#### 精神上の独立性
 
 システム監査人は、監査の実施に当たり、客観的な視点から公正な判断を行わなければならない。
 企業内に所属するシステム監査人が、外観上の独立性を保つためには独立した立場である必要があります。
 システム監査人の所属を内部監査部門にすることで、どの部門からも独立した公平な立場とすることができ、外観上の独立性を保つことができます。
 
+### 情報セキュリティ監査
+
+監査対象が情報セキュリティ対策に係る一定の条件を満たしているか否か、あるいは情報セキュリティ対策の実施状況が適切であるかを独立かつ専門的な立場のシステム監査人が検証又は評価することです。  
+
+※助言型の監査から手がけ、被監査側の情報セキュリティ対策が一定水準に達した段階で保証型の監査に切り替える流れが適切です。  
+※2つの目的は排他的なものではないため、保証と助言の2つを監査の目的とすることができます。  
+※情報セキュリティ監査の目的は、基本的には監査依頼者又は被監査側のニーズによって決定されます。監査人は、事前にどちらを目的とするかについて監査依頼者又は被監査側と調整しておく必要があります。  
+※不特定多数の利害関係者が関与する事業やシステムで、公共性の高い場合や高い機密性が求められる場合については、保証型の監査を定期的に行うことで利害関係者の信頼を得ることが推奨されます。  
+
+#### 保証型の監査
+
+監査対象の情報セキュリティマネジメント体制又は管理策が、監査実施の時点で適切であったことを監査意見として表明する形態の監査  
+
+#### 助言型の監査
+
+今後の改善を目的として、監査対象の情報セキュリティマネジメント体制又は管理策の欠陥や懸念事項等の問題点を検出し、必要に応じて監査意見として改善提言を表明する形態の監査  
+
+#### 令和3年秋期　問57
+
+同じ監査対象に対して情報セキュリティ監査を実施する場合，保証型の監査から手がけ，保証が得られた後に助言型の監査に切り替えなければならない。  
+→  
+助言型の監査から手がけ、被監査側の情報セキュリティ対策が一定水準に達した段階で保証型の監査に切り替える流れが適切です。  
+
+情報セキュリティ監査において，保証型の監査と助言型の監査は排他的であり，監査人はどちらで監査を実施するかを決定しなければならない。  
+→  
+2つの目的は排他的なものではないため、保証と助言の2つを監査の目的とすることができます。  
+
+情報セキュリティ監査を保証型で実施するか助言型で実施するかは，監査要請者のニーズによって決定するのではなく，監査人の責任において決定する。  
+→
+情報セキュリティ監査の目的は、基本的には監査依頼者又は被監査側のニーズによって決定されます。監査人は、事前にどちらを目的とするかについて監査依頼者又は被監査側と調整しておく必要があります。  
+
+不特定多数の利害関係者の情報を取り扱う情報システムに対しては，保証型の監査を定期的に実施し，その結果を開示することが有用である。  
+→
+正しい。不特定多数の利害関係者が関与する事業やシステムで、公共性の高い場合や高い機密性が求められる場合については、保証型の監査を定期的に行うことで利害関係者の信頼を得ることが推奨されます。  
+
 ### 監査調書
 
-監査手続の実施内容や発見した問題点、収集した情報およびそれらの分析結果、監査人の結論などをまとめた文書です。
-監査調書は、監査報告書に記載される監査結果、監査意見、改善勧告などの根拠となります。
-システム監査基準では「システム監査人は、実施した監査手続の結果とその関連資料を、監査調書として作成しなければならない。監査調書は、監査結果の裏付けとなるため、監査の結論に至った過程がわかるように秩序整然と記録し、適切な方法によって保存しなければならない」と定められています。
+監査手続の実施内容や発見した問題点、収集した情報およびそれらの分析結果、監査人の結論などをまとめた文書です。  
+監査調書は、監査報告書に記載される監査結果、監査意見、改善勧告などの根拠となります。  
+システム監査基準では「システム監査人は、実施した監査手続の結果とその関連資料を、監査調書として作成しなければならない。  
+監査調書は、監査結果の裏付けとなるため、監査の結論に至った過程がわかるように秩序整然と記録し、適切な方法によって保存しなければならない」と定められています。  
 
 ### インタビュー法
 
-監査手続の技法の1つで、監査対象の実態を確かめるために、システム監査人が、直接、関係者に口頭で問い合わせ、回答を入手することをいいます。
+監査手続の技法の1つで、監査対象の実態を確かめるために、システム監査人が、直接、関係者に口頭で問い合わせ、回答を入手することをいいます。  
 
-インタビューは、情報収集や問題発見に有効な手段ですが、ただ見聞きしただけの情報では監査証拠として不十分です。
+インタビューは、情報収集や問題発見に有効な手段ですが、ただ見聞きしただけの情報では監査証拠として不十分です。  
 証拠としての適切性を確保するためには、インタビューで得た情報だけに依存するのではなく、現物・状況等の確認や照合、
-さらにはシステム監査人によるテストの実施、詳細な分析などを通じて可能な限り客観的で確証的な証拠を入手するよう心掛けることが重要です。
+さらにはシステム監査人によるテストの実施、詳細な分析などを通じて可能な限り客観的で確証的な証拠を入手するよう心掛けることが重要です。  
 →
 証拠を取ること。
 
