C# ジェネリック、プロパティ書き方

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -758,9 +758,13 @@ IETFによってRFC 7519として標準化されている。
 
 ## XAML プロパティの設定方法
 
-[XAML の基本構造（WPF）](https://ufcpp.net/study/dotnet/wpf_xamlbasic.html)
+[XAML の基本構造（WPF）](https://ufcpp.net/study/dotnet/wpf_xamlbasic.html)  
+[XAMLの書き方（１）](https://techinfoofmicrosofttech.osscons.jp/index.php?XAML%E3%81%AE%E6%9B%B8%E3%81%8D%E6%96%B9%EF%BC%88%EF%BC%91%EF%BC%89#ra4d77a1)  
 
-Attribute Syntax
+### プロパティ属性構文(Attribute Syntax)
+
+要素の属性にテキストを使用して設定する。  
+値を文字列で指定できる（文字列そのもの or 文字列から直接変換可能な型）プロパティの場合はこの構文を使うと便利です。  
 
 ``` XML
 <TextBox 
@@ -768,11 +772,11 @@ Attribute Syntax
   Background = "White" Foreground = "Blue" />
 ```
 
-この書き方は Attribute Syntax と言って、 値を文字列で指定できる（文字列そのもの or 文字列から直接変換可能な型）プロパティの場合はこの構文を使うと便利です。
+### プロパティ要素構文(Property Element Syntax)
 
-Property Element Syntax
-
-では、もっと複雑な型を持つプロパティの場合にはどうすればいいかと言うと、 XML 要素の子要素としてプロパティの値を設定する Property Element Syntax という構文も用意されています。 例えば、上の例を Property Element Syntax で書き直すと以下のようになります。
+要素のinnerText・innerXMLを使用してプロパティを設定する。
+では、もっと複雑な型を持つプロパティの場合にはどうすればいいかと言うと、 XML 要素の子要素としてプロパティの値を設定する Property Element Syntax という構文も用意されています。
+例えば、上の例を Property Element Syntax で書き直すと以下のようになります。
 
 ``` XML
 <TextBox>
@@ -784,11 +788,7 @@ Property Element Syntax
 </TextBox>
 ```
 
-
-<SETTER>はStyleタグでのみ有効な模様。
-
-
-
+`<SETTER>`はStyleタグでのみ有効な模様。
 
 ---
 
