--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -756,40 +756,6 @@ IETFによってRFC 7519として標準化されている。
 [PrismとLivetで画面を閉じるMVVM](https://redwarrior.hateblo.jp/entry/2020/08/31/090000)  
 [DIYプログラミングでMVVMを推奨しない理由](https://resanaplaza.com/2020/08/13/%E3%80%90wpf%E3%80%91diy%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9F%E3%83%B3%E3%82%B0%E3%81%A7mvvm%E3%82%92%E6%8E%A8%E5%A5%A8%E3%81%97%E3%81%AA%E3%81%84%E7%90%86%E7%94%B1/)  
 
-## XAML プロパティの設定方法
-
-[XAML の基本構造（WPF）](https://ufcpp.net/study/dotnet/wpf_xamlbasic.html)  
-[XAMLの書き方（１）](https://techinfoofmicrosofttech.osscons.jp/index.php?XAML%E3%81%AE%E6%9B%B8%E3%81%8D%E6%96%B9%EF%BC%88%EF%BC%91%EF%BC%89#ra4d77a1)  
-
-### プロパティ属性構文(Attribute Syntax)
-
-要素の属性にテキストを使用して設定する。  
-値を文字列で指定できる（文字列そのもの or 文字列から直接変換可能な型）プロパティの場合はこの構文を使うと便利です。  
-
-``` XML
-<TextBox 
-  Width = "100" FontSize = "30" Text = "text 1"
-  Background = "White" Foreground = "Blue" />
-```
-
-### プロパティ要素構文(Property Element Syntax)
-
-要素のinnerText・innerXMLを使用してプロパティを設定する。
-では、もっと複雑な型を持つプロパティの場合にはどうすればいいかと言うと、 XML 要素の子要素としてプロパティの値を設定する Property Element Syntax という構文も用意されています。
-例えば、上の例を Property Element Syntax で書き直すと以下のようになります。
-
-``` XML
-<TextBox>
-  <TextBox.Width>100</TextBox.Width>
-  <TextBox.FontSize>30</TextBox.FontSize>
-  <TextBox.Background>White</TextBox.Background>
-  <TextBox.Foreground>Blue</TextBox.Foreground>
-  <TextBox.Text>text 1</TextBox.Text>
-</TextBox>
-```
-
-`<SETTER>`はStyleタグでのみ有効な模様。
-
 ---
 
 ## 行けそうだけどいけないUPDATE
@@ -938,6 +904,12 @@ WHERE
 
 ---
 
+[DataGridView編メニュー](https://dobon.net/vb/dotnet/datagridview/)
+[ItemsControl 攻略 ～ 外観のカスタマイズ](http://grabacr.net/archives/1240)
+[WPF】ItemsControlの基本的な使い方](https://qiita.com/ebipilaf/items/c3e9e501eb0560a12ce8)
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -945,3 +917,30 @@ avalon peninsula canada
 
 ・クエリエラー調査
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
+
+
+パソコンはとりあえず初期化しちゃえばよくね？
+どうせ使わないんだし、何かしらの形で処分するのは決まっている。
+Linux用に使うってなら話は別だが、
+
+・髪切る
+・掃除、洗濯
+・飲み会
+・パソコン初期化
+・荷物受け取り
+・ノルマ達成
+・買い物、散歩
+
+大忙しだな。
+
+
+
+筋トレする時窓開けるのありでは。
+空気の入れ替えもできるし、一石二鳥な気がする。
+早速やってみよう。
+今日もカールでいいかな。
+
+
+明日は8時からの勉強ができないので、事前にある程度進めておく必要がありそう。
+今日、午後1問できれば結構なアドバンテージになる気がする。
+
