--- a/AppliedInformation/午後/H31S.md
+++ b/AppliedInformation/午後/H31S.md
@@ -2,6 +2,49 @@
 
 ---
 
+## プログラミング 券売機の注文の状態を判定するプログラム
+
+めっちゃ簡単だったので特にいうことはない。  
+業務システム的な側面が強かったのですんなり理解できた。  
+最後の間違えた問題だけ知見を得る。  
+
+``` txt : 30分 8/9
+0,2,3,4,5
+false
+3:0
+
+order[i].A
+order[i].N * 100 + order[i].S * 10
+status_table[status][event_index].discount
+status_table[status][event_index].status
+acceptedがtrueに等しい
+
+イ
+ウ × エ
+
+---
+
+イ
+実現可能です。
+まず表1のオプションにつゆの量として、普通、多め、少なめをN=4、S=0、O=1として追加します。次に、新しく状態6を作成し、状態1から状態6を経て状態2に移るように表2を変更します。
+これにより、オプション指定が必須なメイン商品の状態遷移を「1→6→2」とすることができ、2つのオプション項目を必須選択にできます。
+
+ウ
+「1回の注文でセットメニューに組み込めるサイドメニュー1+サイドメニュー2のセットが複数あった場合は、50円×セット数の値引きを行う」と解釈します。例えば、牛丼+野菜サラダ+漬物+みそ汁+スープの注文があった場合を考えます。
+問題文の条件の場合は、図1の〔セットメニューの値引きのルール〕に「値引きは食券購入ごとに1回だけ適用される。」とあるため、値引き金額は50円になります。それに対して、「ウ」の変更を加えた場合は、100円の値引きになります。
+これを実現するには、セット対象のサイドメニューが注文された数をプログラム中で数える必要があるため、表1、2の内容を変更するだけでは実現できません。
+
+エ
+実現可能です。
+まず表1のメインメニューに名称=カレー、N=1、S=1、O=3を追加します。次にオプションに、「カレー(並)」と「カレー(大盛り)」をN=4、S=0、O=3で追加することで実現可能です。
+
+ウに関しては表2の状態遷移図を修正すればいけると思ったが、よく考えればダメだった模様。
+問題文をよく見ると、商品数をカウントしないといけないらしく、カウントのためにはプログラムの修正の必要があるからダメなんだと。
+エは頓智だな。何でもかんでも追加すればいけるなら素直にそうすべきだった。
+```
+
+---
+
 ## ネットワーク 無線LANの導入
 
 この問題のおかげでチャネルとリレーエージェントを知ったんだ。  
