30年プログラミングだけ

--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -1,5 +1,7 @@
 # 平成29年秋
 
+---
+
 ## セキュリティ
 
 まぁ、話はわかる。  
@@ -68,6 +70,13 @@ AESはDESの後継。
 ## 2
 [2]
 (1)でも触れましたが、メールによる提供では誤送信の可能性を否定できません。本来は依頼のあった有資格者に送付されるべきですが、勘違いや内部不正により無資格者や別部門の有資格者、または社外などの意図しない宛先に顧客情報が送信されてしまう恐れがあります。
+```
+
+---
+
+## プログラミング
+
+``` txt
 ```
 
 ---
