--- a/AppliedInformation/午後/H30S.md
+++ b/AppliedInformation/午後/H30S.md
@@ -6,6 +6,52 @@
 
 ---
 
+## プログラミング ナイトの巡歴問題
+
+すんなりわかる問題とわからない問題の差は何なのだろうか。  
+これはほとんどわかったので特に問題ない。  
+
+1問を除いて正解なので、間違えた1問だけまとめて終わりだ。  
+あとは話はわかったので特にない。  
+
+``` txt 29分 11/14 実質13門正解
+2
+-2
+
+iがm*nに等しい × iがm*n
+i+1
+v+dv[j]
+h+dh[j]
+board[v][h]を初期化する × board[v][h] ← 0
+
+20
+for(vを3からm+2まで1ずつ増やす)
+21
+for(hを3からn+2まで1ずつ増やす)
+32
+search(1,3,3)
+2,3,14 × 2,3,16,17
+
+---
+
+初期化の下りはよく見たらif文で0を判定しているので素直に0を入れたほうがよかったのかも。
+初期化でもまあ、ギリ通じるかなって感じかな。
+
+
+[3][3]
+範囲外の要素には1が格納されています。この理由は、範囲外のマスが調査対象になった場合でも4行目の「if (board[v][h]が0)」の条件式で偽と判定され、その後の処理を省略できるためです。従来は2・3行目のif文で調査対象のマスが範囲内かどうかをチェックしていましたが、変更後は盤面を拡大したことにより盤面外のマスが調査対象となることがなくなります。このため、vとhが適切な範囲に収まっているかどうかのチェックが不要になります。
+
+以上より削除すべき行は、2・3行目の if文 及びその2つのif文に対応する16・17行目の endif と判断できます。
+
+∴2, 3, 16, 17
+
+→
+14行の道順を消すロジックがあると、外部の1が0になってしまうことを危惧したが、そこに来る前にif文でブロックされるから考える必要はなかった。
+これがないと範囲内で通った部分が永遠に初期化されないので見つけることができなくなってしまうのでやはり必要だ。
+```
+
+---
+
 ## ネットワーク Webシステムの構成変更
 
 この問題でDNSラウンドロビンを知った。  
