プログラミングノルマ

--- a/AppliedInformation/午後/H27S.md
+++ b/AppliedInformation/午後/H27S.md
@@ -2,6 +2,93 @@
 
 ---
 
+## プログラミング データ圧縮の前処理として用いられるBlock-sorting
+
+久しぶりに敗北した。  
+話は分かったけど、わかったころにはってやつ。  
+余裕がないとケアレスミスも目立つ。  
+大文字小文字の区別で間違ったりしている。  
+
+2個3個ぐるぐる回す系の問題はやっぱり時間がかかる。  
+こういう問題は最後までいけなくても仕方ないかもしれない。  
+この年の合格率は低いし、スレもたくさん立っているので難しかったんだろうなぁと予想できる。  
+
+``` txt 30分オーバー 6/10
+"eiikks",2 × "skkeii",5
+→気が付いた時には時すでにお寿司
+
+1
+inputStringの長さ
+inputStringとEncodeArray[k]が等しい × EncodeArray[k]がInputStringと同一
+→これに関しては正解だろう。
+
+decordArray[1][Line] × DecordArray[1][Line]
+decordArray[2][Line] × DecordArray[2][Line]
+p-1
+
+インデックスを破壊しない安定したソートを使用する 0%
+→同じ文字の場合に元の順序を保持するソートを使用する
+空白
+→2番目のソートキーにArray[2]の要素を加える
+
+---
+
+問題文の〔Block-sortingの変換処理〕に従い、入力文字列"kiseki"に対する変換結果を求めます。
+
+まず、図2「Block-sortingの変換処理」にある「巡回シフト後のブロック」を求めるために、入力文字列"kiseki"を1文字左巡回シフトすることを入力文字数分だけ繰り返します。
+入力文字列："kiseki"
+(1回目)1文字左巡回シフト："isekik"
+(2回目)1文字左巡回シフト："sekiki"
+(3回目)1文字左巡回シフト："ekikis"
+(4回目)1文字左巡回シフト："kikise"
+(5回目)1文字左巡回シフト："ikisek"
+次に巡回シフト後のブロックを辞書式順(a→z)にソートし、図2「Block-sortingの変換処理」にある「ソート後のブロック」を求めます。
+"ekikis"
+"ikisek"
+"isekik"
+"kikise"
+"kiseki"
+"sekiki"
+最後に、「ソート後のブロック」から一番右の文字を行の順に取り出した文字列（上記ブロックで赤字部分を並べたもの）と、入力文字列("kiseki")と同じ文字列がある行番号を合わせて変換結果とします。
+末尾を並べた文字列は"skkeii"、入力文字列である"kiseki"は5行目に位置します。変換結果の記法は「"文字列", 行番号」なので、答えは「"skkeii", 5」となります。
+
+∴"skkeii"，5
+→
+辞書順にソートするのって一番左の列だけなのか？
+まずその前提がどこにも書いてないからソートできなかったんだが？
+あー・・・辞書順のソートを知っている前提か・・・。
+左の行ではなく全部で比較するんだ。
+eが最も若いので一番上になるのはそうとして、同じiの中でどれが一番上になるかといえば、2列目を見比べる。
+kとsではkが若いので、2列目がkの行を2番目とする。
+それを繰り返していくのが辞書式順ってことなんだ・・・。
+多分基本的なことすぎるんだろうけど、俺は知らなんだ。
+
+
+
+[4]
+問題文中にクイックソート（不安定なソート）と記載されているように、クイックソートでは同じ文字があった場合に、ソート前の順序がソート後も保存されるとは限りません。Block-sortingの復元手順の手順2にあるように「文字をソートする。同じ文字の場合は添字の順に並べる。」ことが条件となっているため、不安定なソートでは期待通りに動作しない（復元処理の結果が入力文字列と一致しない）ことがあります。
+
+〔ソートアルゴリズムについて〕
+不安定なソートとは逆に、ソート前の順序がソート後も保存される性質を持つソートアルゴリズムを安定なソート（stable sort）といいます。不安定なソートアルゴリズムを用いていることが原因なのですから、安定なソートアルゴリズムを使用するように変更すれば問題を解消できます。
+よって、ソートアルゴリズムを見直す場合は、同じ文字の場合に元の順序を保持するソート（安定なソート）を使用するが適切です。
+
+∴同じ文字の場合に元の順序を保持するソートを使用する
+
+→
+同じこと創造してたのだが、となればあっているようなものではなかろうか？
+部分点をもらえるくらいの自信はある。
+
+
+〔ソートキーについて〕
+クイックソートのような不安定なソートを用いる場合でもキーの工夫によって問題を解消できます。クイックソートでは比較条件として複数のキーと指定することもできるので、1番目のソートキー（文字）が同じ場合は、2番目のソートキー（添字）の大小でソートすれば手順2の条件を満たすことができます。
+よって、ソートキーを見直す場合は、2番目のソートキーにArray[2]の要素を加えるが適切です。あくまで憶測ですが、Array[1]の文字とArray[2]の添字を連結した文字列をキーに指定するとかでもいいのかもしれません。
+
+∴2番目のソートキーにArray[2]の要素を加える
+
+```
+
+---
+
 ## ネットワーク DHCPを利用したサーバの冗長化
 
 なんか釈然としない問題だったな。  
