--- a/AppliedInformation/午後/H28S.md
+++ b/AppliedInformation/午後/H28S.md
@@ -1,6 +1,72 @@
 # 平成28年春季
 
+---
+
 ## 情報セキュリティ Webサイトを用いた書籍販売システムのセキュリティ
+
+---
+
+## プログラミング ライフゲーム
+
+30分は超えてしまったが、全問正解した。  
+話はわかったが、表現が思いつかなかったのと、最後のなぞなぞが解けなかったために30分を超えてしまった。  
+それ以外は全部わかっているので、特に解説の必要はないかな。  
+
+``` txt 30分オーバー 9/10
+×
+×
+○
+○
+
+(k-1) * N + j
+
+temp[c]と1が等しい
+(temp[i]と0が等しい) and (eが3と等しい) → 正確には(eと3が等しい)だな。
+m[i] ← 1
+
+盤上における1行目、N行目、1列目、N列目の端のマス 100%
+他)チェックするマスが盤の第1列または第N列の場合
+→これ微妙に違うかも。行については言及してはいけないやつだ。
+まぁ、部分点はもらえるかな。
+
+2
+for(iを2からpまで1ずつ増やす)
+
+---
+
+[3]
+αを含む一連の処理は、aとbの値を調整する処理です。aとbは、その後のfor文でx(列)の開始位置と終了位置を指定する変数です。なぜこのような処理をしなければならないのかというと、チェックするマスの隣接するマスの数と位置が、中心となるマスの位置によって変わるからです。
+pm03_13.gif/image-size:363×82
+上記のように、現在チェックしているマスが盤上の1列目ないしN列目に位置するときは、隣接するマスの数が少なくなります。具体的には、中心となるマスがどの列に位置するかによって開始位置と終了位置の調整が行われます。
+1列目のとき
+隣接するマスは1列目と2列目なので、a←0、b←1 にする
+N列目のとき
+隣接するマスはN－1列目とN列目なので、a←-1、b←0 にする
+その他(x列目のとき)
+隣接するマスはx－1列目、x列目、x＋1列目なので、a←-1、b←1 にする
+これを踏まえて、αの2つの条件のいずれかを満たすのはどのような場合かを考えていきます。
+
+まず、「i-1がNで割り切れる」場合を考えます。仮に N＝5 だとすると、i-1 が N で割り切れるときの i は、6、11、16、21、…です。これは i×N＋1 の数であり、どれも盤上の1列目に対応します。
+次に、「iがNで割り切れる」場合を考えます。先程と同様に N＝5 だとすると、i が N で割り切れるときの i は、5、10、15、20、…です。これは i×N の数であり、どれも盤上のN列目に対応します。
+
+よって、αの2つの条件を満たすのは、「チェックするマスが盤の第1列又は第N列の場合」となります。
+
+∴チェックするマスが盤の第1列又は第N列の場合
+
+
+
+[4]
+update関数は配列mを次世代に更新する関数です。最初の世代（第1世代）に対してupdate関数を1回実行すると、配列mは第2世代に更新されます。
+
+図3のテストプログラムでは、第p世代が正しい結果であることを確認するためのプログラムです。仮に第5世代を検証したい場合、p＝5ですので、2行目のfor文内のupdate関数は(i=1…5までの)5回実行されます。第1世代にupdate関数を5回適用すると配列mは第6世代になります。検証したいのは第5世代の配列mですが、図3のプログラムでは第6世代の配列mと第5世代の配列rを比較することになってしまいます。
+
+配列mを第p世代にしたいときには、update関数をp-1回実行しなければなりません。図3のプログラムではp回実行してしまうので、テストは常に失敗します。つまり、誤りがあるのは2行目のfor文の継続条件です。
+
+これを改善するには、update関数がp-1回実行されるようにプログラムを変更する必要があります。for文の「1からpまで」を「2からpまで」若しくは「1から(p-1)まで」に変更することでこの目的を達成できます。模範解答では「2からpまで」の方が採用されていますが、for文内でiが使用されているわけではないため、プログラム的にはどちらでも構わないと思います。
+
+∴(1) ケ＝2
+　(2) for (iを2からpまで1ずつ増やす)
+```
 
 ---
 
