--- a/AppliedInformation/午後/H29A.md
+++ b/AppliedInformation/午後/H29A.md
@@ -74,9 +74,90 @@ AESはDESの後継。
 
 ---
 
-## プログラミング
+## プログラミング ナップザック問題
 
-``` txt
+正直何がしたいのかさっぱりわからなかったけど正解自体はしていた。  
+回答の根拠も、何したいかわからんけど、話を聞く限りこう入れるのが自然なんじゃないかって感覚でやった。  
+最後まで悩んだやつは外れたが、それ以外は当たってた。  
+最後の計算量の問題も当たるとは思っていなかったが、logを使う要素が見当たらなかったので、そのまま掛け算したら当たった。  
+日本語云々の前に超まどろっこしいことやってる感じがして、なんでそんなことする必要があるのか理解できなかった。  
+回答を読み漁る。  
+
+計算量の問題が正解したのは割とまぐれなことがわかった。  
+そもそも計算量のルールを知らないことがわかったので、それで正解できたのは本当に偶然だ。  
+
+なーるほど。  
+俺が勝手にフィルターかけて考えてただけか。  
+文中の手順通りにやれば、確かに全部答えになるんだよな。  
+回りくどいとか思う前に素直にトレースして答えになることを確認すべきだった。  
+プログラムもその通りのことをやっているだけで、全問正解してもおかしくない内容だった。  
+
+``` txt 30分オーバー 9/10
+6
+9
+12
+15
+
+0
+1
+1
+
+t-size[s]
+maxvalue[t]
+choise[k]
+ × maxvalue[V]
+
+NV
+
+---
+
+容量制限5であるエの価値合計を求めた際には、品物Cを選択した場合の価値合計がA，Bだけの組合せよりも大きくなりました。このため最後に選択されたのは品物Cになります。品物Cの容積は3ですから、続いて5から3を減じた容量制限2の列に注目します。容量制限2では、Aだけを選べる場合より、A，Bを選べる場合の価値合計が大きくなっています。したがって品物Bが選択されたことになります。つまり容量制限5で最大価値を実現する組合せは、品物Bが1つ、品物Cが1つです。
+
+∴A＝0，B＝1，C＝1
+
+
+
+〔オについて〕
+動的計画法は以下のプロセスを繰り返して、容量制限ごとの最大価値を求めます。
+容量制限から、現在検証している品物(以下，品物X)の容積を減じる。
+①で求めた数における小問題の結果に品物Xの価値を足す。
+②で求めた合計価値と、これまでの最大価値を比較して大きい方をその容量制限における最大価値とする。
+問題文のプログラムでは、変数sが現在検証中の品物の番号、変数tが検証中の容量制限を表しています。value[s]は品物の容積ですから、
+temp ← maxvalue[オ]＋value[s]
+の部分は上記の②に対応します。つまりオには対象となる小問題を指定するための式(①の部分)が入ります。容量制限がt、品物の容積がsize[s]なのでオは t-size[s] です。
+
+∴オ＝t-size[s]
+
+〔カについて〕
+カを含む命令文は上記の③の処理に相当します。tempには②で求めた価値合計が、maxvalue[t]には容量制限tにおける最大価値が格納されています。tempがmaxvalue[t]よりも大きければ、容量制限tにおける最大価値はtempになるので、maxvalue[t]をtempで更新することになります。つまりtempの代入先は maxvalue[t] です。
+
+∴カ＝maxvalue[t]
+
+〔キについて〕
+キを含むループは、容量制限から0まで遡りながら選んだ品物を出力する処理です。choice[t]には容量制限tのとき最後に選んだ品物が格納されており、ループの前に k ← V で初期化されているので、1回目のループではchoice[V]、すなわち最後に選んだ品物が出力されることになります。表4のケースであればchoice[5]が出力されます。
+次に出力すべきは、容量制限から選んだ品物の容積を減じた数の小問題を解いたときに最後に選ばれた品物です。表4のケースであれば 5－3＝2 なので、2回目のループではchoice[2]を出力しなければなりません。最後に選んだ品物の番号は直前に出力したchoice[k]に格納されているので、現在の容量制限を保持している変数kからchoice[k]の容積－size[choice[k]]を減じることになります。
+
+∴キ＝choice[k]
+
+〔クについて〕
+表4を見るとわかるように動的計画法の結果はmaxvalue[]の最終要素に格納されます。ナップザックの容量制限は変数Vが保持しているので、maxvalue[V]を指定すれば容量制限Vにおける価値合計を出力できます。
+
+∴ク＝V
+
+
+
+[4]
+O(ビッグオー)記法では、計算量をO(n)やO(n2)ような形で表します。括弧の中に入る文字は、計算量を表す式から次数が最大の項以外を除き、さらにそこから係数を除いたものになります。
+
+まずプログラムの各部分の計算量(ステップ数)は以下のようになっています。
+pm03_7.gif/image-size:497×418
+これを全て足すとプログラム全体の計算量を表す以下の式になります。
+
+　2V＋3NV＋1＋2V＋1
+＝3NV＋4V＋2
+
+この式中で次数が最大の項は3NVなので、これ以外を式から除きます。さらに3NVの係数である3を除いたNVがケに入ります。
+
 ```
 
 ---
