--- a/AppliedInformation/午後/H29S.md
+++ b/AppliedInformation/午後/H29S.md
@@ -45,9 +45,101 @@ e:インターネット
 
 ---
 
-## プログラミング
+## プログラミング 探索アルゴリズム
 
-``` txt
+30分の地点で最後の問題を解けずに終わった。  
+だけどそこまでの問題は1問を除いてすべて正解だった。  
+まぁ表現の問題でバツはつけられたが、言いたいことはあっている。  
+よくよく考えれば文字列の"Y","N"の指定だろうからそこはちゃんとしないと不正解になりそうではある。  
+てか、模範解答にもダブルコーテーションついてるからそういうことなんだろう。  
+
+30分すぎた後に最後の問題をやってみたが、すぐにわかる問題だった。  
+やっぱり全体的に話はわかったので、この問題も解説は特にいいかな。  
+解説というよりもどこに躓いて何が悪かったのかを個人的にまとめたほうがいいな。  
+
+・スタックとキューの問題で問われていることを理解するのに時間がかかった。  
+・ダブルクォーテーションのつけ忘れに気を付ける。それもれっきとした回答。  
+
+``` txt 30分オーバー 8/11 , 30分オーバーを含めるなら10問正解
+isEmpty()が0である
+ansStatus ← currentStatus
+ansStatus ← currentStatus
+currentStatus.nextIndexが0ではない
+
+N × "N"
+Y × "Y"
+→ダブルコーテーションのつけ忘れに気を付ける
+
+(A),(B),(C),(D),(E),(F),(G)
+(A),(C),(G),(F),(B),(E),(F) → 最後は(D)。確認ミス
+
+ウ × ア
+
+数が大きい順にソートしておく 100%
+他)数を降順にソートしておく
+早い段階で合計が目標X以上になるから 0%
+→早い段階で探索を打ち切ることができる
+
+---
+
+[3]
+キューは先入れ先出しのデータ構造です。プログラムの12行目・13行目より、先に次の数を選択した状態をキューに追加し、その後に次の数を選択しない場合の状態をキューに追加していることがわかります。具体的には、以下の手順でキューへの追加・取り出しが行われます（[ ]はキューの内部です）。
+初期状態Aをキューに追加する　[A]
+初期状態Aをキューから取り出す []→A
+状態Bをキューに追加する　[B]
+状態Cをキューに追加する　[C，B]
+状態Bをキューから取り出す　[C]→B
+状態Dをキューに追加する　[D，C]
+状態Eをキューに追加する　[E，D，C]
+状態Cをキューから取り出す　[E，D]→C
+状態Fをキューに追加する　[F，E，D]
+状態Gをキューに追加する　[G，F，E，D]
+状態Dをキューから取り出す　[G，F，E]→D
+状態Eをキューから取り出す　[G，F]→E
+状態Fをキューから取り出す　[G]→F
+状態Gをキューから取り出す　[]→G
+評価はキューから取り出した順に行われるため、キュー構造を使用した場合の評価順は「(A)→(B)→(C)→(D)→(E)→(F)→(G)」になります。
+
+∴(A)→(B)→(C)→(D)→(E)→(F)→(G)
+
+スタックは後入れ先出しのデータ構造です。(1)の処理をスタックに置き換えて考えると、スタックを使用した場合には、以下の手順で追加・取り出しが行われます（[ ]はスタックの内部です）。
+初期状態Aをスタックに追加する　[A]
+初期状態Aをスタックから取り出す　[]→A
+状態Bをスタックに追加する　[B]
+状態Cをスタックに追加する　[B，C]
+状態Cをスタックから取り出す　[B]→C
+状態Fをスタックに追加する　[B，F]
+状態Gをスタックに追加する　[B，F，G]
+状態Gをスタックから取り出す　[B，F]→G
+状態Fをスタックから取り出す　[B]→F
+状態Bをスタックから取り出す　[]→B
+状態Dをスタックに追加する　[D]
+状態Eをスタックに追加する　[D，E]
+状態Eをスタックから取り出す　[D]→E
+状態Dをスタックから取り出す　[]→D
+評価はスタックから取り出した順に行われるため、スタック構造を使用した場合の評価順は「(A)→(C)→(G)→(F)→(B)→(E)→(D)」になります。
+
+∴(A)→(C)→(G)→(F)→(B)→(E)→(D)
+
+
+
+[4]
+指定されたn個が（10, 34, 55, 77）の場合を考えます。4つの数それぞれに"選択する"と"選択しない"の2つのケースがあるため、全ての組合せを網羅すると「2×2×2×2＝16＝2^4個」の状態が存在します。これを一般化すると、指定された数がn個の場合には2n個の状態を用意しなければならないということがわかります。
+
+状態を1つ格納するのに必要なメモリ使用量が m ですから、指定された数がn個の場合に必要なメモリ領域は、状態数にメモリ使用量を乗じた「2nm」になります。
+
+∴ア：2^nm
+→
+数式が出てきたので警戒したが、単純に考えればそうだよなって思う。
+
+
+[5]
+探索アルゴリズムでは事前にソートをしておくと、効率良く探索ができます。今回の問題では、"指定されたn個の数"を降順にソートしておくと、早い段階（木構造の根に近い部分で）で目標Xを超えるか否かを判断できるので、探索回数の削減に繋がります。
+
+これらのことから、内容は「数を降順にソートしておく」、理由は「早い段階で探索を打ち切ることができる」が適切です。
+
+∴内容：数を降順にソートしておく
+　理由：早い段階で探索を打ち切ることができる
 ```
 
 ---
