H27Aプログラミング、計算量まとめ

--- a/AppliedInformation/午後/H25A.md
+++ b/AppliedInformation/午後/H25A.md
@@ -1,5 +1,7 @@
 # H25A
 
+---
+
 ## セキュリティ Webサイトのセキュリティ強化策
 
 地味に難しかった。  
@@ -156,6 +158,13 @@ a.co.jp : ドメイン名 → ホスト名+ドメイン名 = FQDN
 ブラウザに組み込まれているルート証明書でSSLサーバ証明書の信頼性が確認できない場合
 証明書内の名前とページURLが一致しないという警告
 ページURLのドメイン名と証明書内のコモンネームが一致しない場合
+```
+
+---
+
+## プログラミング
+
+``` txt
 ```
 
 ---
