--- a/AppliedInformation/午後/H27A.md
+++ b/AppliedInformation/午後/H27A.md
@@ -6,6 +6,68 @@
 
 ---
 
+## プログラミング 2分探索木
+
+簡単なほうだった。  
+計算量の問題は相変わらずだが、それ以外はめちゃくちゃ簡単。  
+プログラミングは難易度の落差が激しすぎる。  
+計算量の考え方だけしっかりして次へ行く。  
+それ以外にまとめるものは特にない。  
+
+``` txt 29分 8/10 実質9問正解
+11
+
+kがp.keyより小さい
+new Node(k)
+return p
+p.left
+p.right
+p ← r
+
+log2木の高さ × n
+log2n × log n
+→まぁ、あってるようなものだろう
+※O記法では通常、底を省略して記述しますので、
+じゃあだめだ・・・。知らなかった・・・。
+
+     4
+  2    8
+1   3    12
+
+---
+
+〔クについて〕
+問題文の〔2分探索木の計算量〕には、「2分探索木における計算量は、木の高さに依存する。」とあります。想定される最大の計算量を求めるには、比較回数が最大になる場合を考えます。
+
+探索において比較回数が最大になるのは、全てのノードが一つの子ノードを持つ構造になっていて、探索するキー値が木の葉部分に位置している場合です。このときのノードの数をnとすると、木の高さはn-1です（木の高さは根から一番遠い葉までの枝の数です）。最大比較回数は「木の高さ＋1」で求めることができるため、「n-1+1＝n回」になります。以上より、計算量はO(n)となるので、[ク]には「n」が入ります。
+
+∴ク＝n
+
+→
+そうか。木の高さに依存するってことは、極端なこと言えば右だけにノードを足していけば高さ=nの数ってすることができるわけだ。  
+だから計算量は最大となるnってことになるのね。納得。
+
+
+〔ケについて〕
+完全2分木とは、全てのノードが2つの子ノードを持ち、根から葉までの距離がどこでも等しい下図のような木構造です。
+pm03_10.gif/image-size:418×240
+完全2分木の場合は、探索範囲を1／2ずつに狭めながら探索していきます。すなわち、n個のノードを1／2することをk回繰り返して、1つの値を見つけます。このことから、「n×1／2k＝1」の式を導くことができます。
+
+　n×1／2k＝1
+　n＝1／(1／2k)
+　n＝1×2k
+　n＝2k
+
+より「k=log2n」となります。O記法では通常、底を省略して記述しますので、[ク]には「log n」が入ります。
+
+※完全2分木を探索する計算量は、2分探索の計算量と同じです。
+
+∴ク＝log n
+
+```
+
+---
+
 ## ネットワーク ネットワークの設計
 
 うーん。もう一つ正解したかった。  
