--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -870,6 +870,29 @@ WHERE
 
 ---
 
+## C# StringのLike検索(曖昧検索)
+
+[LINQ：文字列コレクションで「LIKE検索」（部分一致検索）をするには？［C#、VB］](https://atmarkit.itmedia.co.jp/ait/articles/1412/02/news129.html)  
+
+``` C#
+    // LIKE '%ぶた%'：String.Containsを使う
+    var 前後パーセント = sampleData.Where(item => item.Contains("ぶた"));
+    WriteItems("LIKE '%ぶた%'", 前後パーセント);
+    // → LIKE '%ぶた%': ぶた, こぶた, ぶたまん, ねぶたまつり
+    
+    // LIKE 'ぶた%'：String.StartsWithを使う
+    var 後パーセント = sampleData.Where(item => item.StartsWith("ぶた"));
+    WriteItems("LIKE 'ぶた%'", 後パーセント);
+    // → LIKE 'ぶた%': ぶた, ぶたまん
+
+    // LIKE '%ぶた'：String.EndsWithを使う
+    var 前パーセント = sampleData.Where(item => item.EndsWith("ぶた"));
+    WriteItems("LIKE '%ぶた'", 前パーセント);
+    // → LIKE '%ぶた': ぶた, こぶた
+```
+
+---
+
 ## 雑記
 
 トーレス・デル・パイネ国立公園
@@ -877,3 +900,18 @@ avalon peninsula canada
 
 ・クエリエラー調査
 DISTINCTとワイルドカード `*` を併用したら.NETFrameworkで実行速度が遅くなるらしい
+
+
+今日、帰った後にもう一問できるとやばくね？
+頑張ろう。
+
+
+無理に買い物する必要はない。
+欲しいものはない。
+あるけど今じゃない。
+あー・・・。thunderbolt4ケーブルかっちゃう？
+ﾊﾊﾊ・・・。ポイントの無駄遣いだったな。
+
+
+有給を勝ち取った。やったぜ。勉強できる。
+
