H26Sプログラミング、他まとめ

--- a/AppliedInformation/午後/H26S.md
+++ b/AppliedInformation/午後/H26S.md
@@ -6,6 +6,90 @@
 
 ---
 
+## プログラミング 循環小数の循環節を検出するアルゴリズム
+
+簡単なほうだと思うのだが、びっくりするくらい当たらなかった。  
+表現の問題もあるが、やはり計算量の問題は当たらない。  
+それと正解と思っていた問題が間違っていたので、勘違いもあったのかも。  
+わかったからと言って、油断してはならないいい例だったな。  
+どうでもいいが、問題自体は面白かった。  
+
+解説を見てみるとなんでこんな頓珍漢な回答をしたのか不思議でならない。  
+計算量の部分は仕方ないにしても、プログラミングの部分は普通に全問正解できたはず。  
+できるところはできているので、もっと訓練を積んで余裕をもって答えられるようになっていきたい。  
+
+``` txt 30分 2/9 実質5門正解
+mとpが等しい × mがpと等しい
+p ← amari(p * 10 , n) × p ← 1
+mとpが等しくない × mがpと等しくない
+t ← 1 × t ← s
+
+4
+3
+→実際にトレースして問題なかったので特になし
+
+戻り値はすべて0になる × s,tともに0である。
+→部分点くらいはもらえるだろう
+
+4 × O(1)
+O(log n) × O(n)
+
+---
+[1]
+
+〔イについて〕
+プログラムの14行目から20行目までは、図4で示されている「循環節の先頭の検出」の処理に該当します。このフェーズでは「カメは引き続き，ウサギは最初に戻って今度は両者とも1歩ずつ進む。」と説明されています。
+pm03_7.gif/image-size:465×220
+ウサギの位置を最初に戻すには、変数 p を初期値の1（分子を1）に戻す必要がありますが、プログラム中にはこの処理が記述されていません。よって、whileループの前処理をしている[イ]には「p ← 1」が入ります。
+
+→
+単純に最初の位置に戻すだけなら1を代入するだけでよかった。
+これはプログラムの一番最初でやっていること。
+なぜさらに余りを求めるようなことをしたのだろうか。
+
+
+〔エについて〕
+図6中の21行目から26行目までは、図5で示されている「循環節の末尾の検出」の処理に該当します。この処理については、本文中に「循環節の先頭を検出した後、図5に示すように、ウサギだけが再びカメと余りが一致するところ(〈9〉と《15》)まで1歩ずつ進むことによって、循環節の末尾を検出する。」とあります。whileループ内では、ウサギが1歩進むたびに変数 t を1増加させていますが、図5を見るとわかるように、変数 t は0からではなく循環節の先頭を基準に1ずつ増加させる必要があります。変数 t はプログラムの冒頭で0に初期化されたままなので、ここには循環節の先頭が格納されている変数 s を使って変数 t に基準位置を設定する処理が入ることが予想できます。
+
+ここで、例示されている n=56 の末尾検出処理を考えてみます。
+第2フェーズで循環節の先頭位置4を変数 s に求めた後、[エ]の直前で amari() を1回を実行してウサギの位置を一歩進めているので、whileループ開始時の変数 p は一致位置の次の位置（余り32）になっています。そこから余りが一致するまでウサギを進めると t には5が加算されることになります。
+pm03_8.gif/image-size:493×222
+変数 t の説明には、「n=56の場合は9」とありますから、変数 t の基準位置として循環節の開始位置である4を与えてやれば、「4＋5＝9」というように末尾位置を正しく求めることが可能です。よって、[エ]には「t ← s」が入ります。
+
+→
+循環のスタートからカウントしないと意味ないのに初期化してどーするって感じ。
+プログラムだけ見たから惑わされた感じがする。
+
+
+
+[4]
+
+O(オーダ)記法は、実行時に処理するデータ量によってアルゴリズムの計算量がどの程度増加するか、という視点でアルゴリズムを評価するものです。[オ]は空間計算量、[カ]では時間計算量について問われています。
+
+空間計算量
+処理を達成するために必要な記憶領域の大きさ
+
+時間計算量
+処理を達成するために必要な時間
+
+〔オについて〕
+関数 junkan のプログラムが必要とする記憶領域の大きさを考えます。
+
+必要とする記憶領域の大きさは、関数内で宣言する変数の数に依存します。
+表1「関数junkanで使用する変数及び関数」より、関数junkanのプログラムでは、5つの変数を使用していることがわかります。変数の数は定数であり、与えられたnによらず一定です。計算量がデータ量に依存しない場合、O記法では「O(1)」と表します。
+
+∴オ＝O(1)
+
+〔カについて〕
+関数 junkan のプログラムの計算量を考えます。
+
+関数 junkan のプログラムは、「余りが一致するまで」「循環節の先頭の検出」「循環節の末尾の検出」の3つの繰返し処理で構成されています。循環節の桁数が最大 n-1 であることから、3つの処理のいずれも最大 n-1 回で計算可能です。計算量がデータ量nに比例する場合、O記法では「O(n)」と表します。
+
+∴カ＝O(n)
+```
+
+---
+
 ## ネットワーク サブネットを活用したファイルの保護対策
 
 パズルみたいな問題だったな。  
