--- a/BasicInformation/午前/1.テクノロジ系/2.アルゴリズムとプログラミング.md
+++ b/BasicInformation/午前/1.テクノロジ系/2.アルゴリズムとプログラミング.md
@@ -44,13 +44,26 @@ $log_2n＝x$
 
 ### O(ビッグオー)記法
 
+実行時に処理するデータ量によってアルゴリズムの計算量がどの程度増加するか、という視点でアルゴリズムを評価するものです。  
 計算量をO(n)やO(n^2)ような形で表します。  
 
-①括弧の中に入る文字は、計算量を表す式から次数が最大の項以外を除き、さらにそこから係数を除いたものになります。  
-②O記法では通常、底を省略して記述します。  
-log_2 n ×  
-log n ○  
-③想定される最大の計算量を求めるには、比較回数が最大になる場合を考えます。  
+・括弧の中に入る文字は、計算量を表す式から次数が最大の項以外を除き、さらにそこから係数を除いたものになります。  
+・O記法では通常、底を省略して記述します。(log_2 n × , log n ○)  
+・想定される最大の計算量を求めるには、比較回数が最大になる場合を考えます。  
+
+**空間計算量**  
+処理を達成するために必要な記憶領域の大きさ  
+
+必要とする記憶領域の大きさは、関数内で宣言する変数の数に依存します。  
+変数の数は定数であり、与えられたnによらず一定です。  
+計算量がデータ量に依存しない場合、O記法では「O(1)」と表します。  
+
+**時間計算量**  
+処理を達成するために必要な時間  
+
+計算量がデータ量nに比例する場合、O記法では「O(n)」と表します。  
+
+#### 括弧の中に入る文字は、計算量を表す式から次数が最大の項以外を除き、さらにそこから係数を除いたものになります
 
 例:平成29年秋プログラミング  
 まずプログラムの各部分の計算量(ステップ数)は以下のようになっています。  
@@ -65,6 +78,8 @@ log n ○
 この式中で次数が最大の項は3NVなので、これ以外を式から除きます。  
 さらに3NVの係数である3を除いたNVが計算量O(NV)となります。  
 
+#### 想定される最大の計算量を求めるには、比較回数が最大になる場合を考えます
+
 例:平成27年秋プログラミング  
 ![!](https://www.ap-siken.com/kakomon/27_aki/img/pm03_1.gif)  
 
@@ -73,7 +88,35 @@ log n ○
 
 探索において比較回数が最大になるのは、全てのノードが一つの子ノードを持つ構造になっていて、探索するキー値が木の葉部分に位置している場合です。  
 このときのノードの数をnとすると、木の高さはn-1です（木の高さは根から一番遠い葉までの枝の数です）。  
-最大比較回数は「木の高さ＋1」で求めることができるため、「n-1+1＝n回」になります。以上より、計算量はO(n)となるので、[ク]には「n」が入ります。  
+最大比較回数は「木の高さ＋1」で求めることができるため、「n-1+1＝n回」になります。  
+以上より、計算量はO(n)となるので、[ク]には「n」が入ります。  
+
+#### 空間計算量,時間計算量
+
+例:平成26年春プログラミング
+
+![!](https://www.ap-siken.com/kakomon/26_haru/img/pm03_6.gif)  
+
+与えられた n に基づき，O記法で表した場合，関数 junkan のプログラムが必要とする記憶域の大きさは[オ]となり，計算量は[カ]となる。
+
+〔オについて〕空間計算量  
+関数 junkan のプログラムが必要とする記憶領域の大きさを考えます。  
+
+必要とする記憶領域の大きさは、関数内で宣言する変数の数に依存します。  
+表1「関数junkanで使用する変数及び関数」より、関数junkanのプログラムでは、5つの変数を使用していることがわかります。  
+変数の数は定数であり、与えられたnによらず一定です。  
+計算量がデータ量に依存しない場合、O記法では「O(1)」と表します。  
+
+∴オ＝O(1)  
+
+〔カについて〕時間計算量  
+関数 junkan のプログラムの計算量を考えます。  
+
+関数 junkan のプログラムは、「余りが一致するまで」「循環節の先頭の検出」「循環節の末尾の検出」の3つの繰返し処理で構成されています。  
+循環節の桁数が最大 n-1 であることから、3つの処理のいずれも最大 n-1 回で計算可能です。  
+計算量がデータ量nに比例する場合、O記法では「O(n)」と表します。  
+
+∴カ＝O(n)  
 
 ### 辞書式順
 
